Add Shard Pouch Curio support

--- a/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
+++ b/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "curios.identifier.vault_compass": "Vault Compass"
+  "curios.identifier.vault_compass": "Vault Compass",
+  "curios.identifier.shard_pouch": "Shard Pouch"
 }
