--- a/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
+++ b/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
@@ -2,5 +2,6 @@
   "curios.identifier.vault_compass": "Vault Compass",
   "curios.identifier.shard_pouch": "Shard Pouch",
   "vault_curios_enhancements.rebindcompass": "Rebind Compass",
-  "key.categories.vault_curios_enhancements": "Vault Curios Enhancements"
+  "key.categories.vault_curios_enhancements": "Vault Curios Enhancements",
+  "vault_curios_enhancements.openpouch" : "Open Shard Pouch in Curio"
 }
