--- a/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
+++ b/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "curios.identifier.vault_compass": "Vault Compass",
   "curios.identifier.shard_pouch": "Shard Pouch",
+  "curios.identifier.coin_pouch": "Coin Pouch",
+  "curios.identifier.antique_collector_book": "Antique Stamp Collector Book",
   "vault_curios_enhancements.rebindcompass": "Rebind Compass",
   "key.categories.vault_curios_enhancements": "Vault Curios Enhancements"
 }
