--- a/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
+++ b/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
@@ -5,5 +5,6 @@
   "curios.identifier.antique_collector_book": "Antique Stamp Collector Book",
   "vault_curios_enhancements.rebindcompass": "Rebind Compass",
   "vault_curios_enhancements.openantiquebook": "Open Antique Stamp Collector Book",
+    "vault_curios_enhancements.openshardpouch": "Open Shard Pouch",
   "key.categories.vault_curios_enhancements": "Vault Curios Enhancements"
 }
