add back compass keybind (how is that not a thing in vh)

--- a/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
+++ b/src/main/resources/assets/vaultcuriosenhancements/lang/en_us.json
@@ -6,5 +6,6 @@
   "vault_curios_enhancements.openantiquebook": "Open Antique Stamp Collector Book",
   "vault_curios_enhancements.openshardpouch": "Open Shard Pouch",
   "vault_curios_enhancements.opencoinpouch": "Open Coin Pouch",
+  "vault_curios_enhancements.opencompass": "Open Compass Target Selection",
   "key.categories.vault_curios_enhancements": "Vault Curios Enhancements"
 }
